# CrewLution

./: .gitignore
Docs/: SDD.md  architecture.md  database-schema.md  openapi.yaml  schema.dbml  schema.sql  workflows.md
backend/: pyproject.toml
backend/accounts/: forms.py  models.py  urls.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/services/: company_switch.py  signup.py
backend/accounts/templates/accounts/: signup.html
backend/accounts/views/: auth.py
backend/commerce/templates/commerce/: dashboard.html
backend/commerce/views/: dashboard.py
backend/config/: app_urls.py  settings.py  urls.py
backend/marketing/: urls.py
backend/marketing/static/marketing/css/: marketing.css
backend/marketing/templates/marketing/: base.html  home.html  pricing.html
backend/marketing/views/: pages.py
